# opencv_cpp

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  V2_UPGRADE_PLAN.md  dev-log.md  readme.md
.cache/clangd/index/: annotator.cpp.8C598A39B8967BE5.idx  annotator.hpp.21FEBA25DD152036.idx  cli.hpp.166EEDB1CE165BC6.idx  config.cpp.812A9300E4C1F529.idx  config.hpp.6B9B806F8D0C4325.idx  detection.hpp.F7FA3EF88EA6E8C2.idx  hog_detector.cpp.16AA6859D12D1D8B.idx  hog_detector.hpp.15238EC4749CCD2F.idx  main.cpp.0AA048F719486FD3.idx  main.cpp.37A197875D7766AF.idx  main.cpp.51DE84E83C361A46.idx  main.cpp.54C8C022C54E054C.idx  main.cpp.585B8B0CCBA52C10.idx  main.cpp.6E82C0AD38CC657D.idx  main.cpp.78DACBE06971CFE7.idx  main.cpp.BD200560AAE26EC5.idx  main.cpp.D1E0379595EEEDBC.idx  main.cpp.D3D217A405594013.idx  main.cpp.DA552B2A9C25DB8E.idx  main.cpp.DD71C1EA4077C81B.idx  main.cpp.E8ACB91DD99B3D28.idx  main.cpp.FFEE6057BB1C7695.idx  test_source_spec.cpp.2852096044409F23.idx  test_tracker.cpp.0EEC4EE628DE7662.idx  tracker.cpp.EFB044AE4D3C4D0A.idx  tracker.hpp.448A8C97C796F9EB.idx  video_source.cpp.9696D37400DB1B24.idx  video_source.hpp.37A493B48D4ACCB7.idx  yolo_detector.cpp.84BD52A21ACE1D49.idx  yolo_detector.hpp.E78ED4AEC5337450.idx
alpr_plate_detection/: alpr.cpp  alpr_file.cpp  alpr_haar_cascade.cpp  openalpr.conf  plate_recognizer
alpr_plate_detection/helper/: Helper.cpp  Helper.h  definitions.h
alpr_plate_detection/webapi/: webapi.cpp  webapi.h
apps/: CMakeLists.txt
apps/alpr/: main.cpp
apps/alpr_client/: main.cpp
apps/alpr_server/: dashboard.hpp  main.cpp
apps/color_track/: main.cpp
apps/contours/: main.cpp
apps/detect/: main.cpp
apps/edges/: main.cpp
apps/face_detect/: main.cpp
apps/filters/: main.cpp
apps/image_ops/: main.cpp
apps/motion_detect/: main.cpp
apps/multicam/: main.cpp
apps/object_track/: main.cpp
apps/optical_flow/: main.cpp
apps/qr_scanner/: main.cpp
apps/rtsp_record/: main.cpp
cmake/: CompilerWarnings.cmake
configs/: alpr.json  alpr_server.json  car_plates_v8.json  car_rtsp.json  car_webcam.json  cow_file.json  example.json  human_hog.json  human_yolo.json  multicam.json
core/: CMakeLists.txt
core/include/vision/: alpr_pipeline.hpp  annotator.hpp  cli.hpp  config.hpp  detection.hpp  hog_detector.hpp  plate_ocr.hpp  tracker.hpp  video_source.hpp  yolo_detector.hpp
core/src/: alpr_pipeline.cpp  annotator.cpp  config.cpp  hog_detector.cpp  plate_ocr.cpp  tracker.cpp  video_source.cpp  yolo_detector.cpp
docs/: DECISIONS.md
human_detection/: CMakeLists.txt  human_detection.cpp
human_detection_yolo/: CMakeLists.txt  main.cpp
models/: README.md
scripts/: check.sh  download_models.sh  purge_history.sh
simple rtsp/: multi_thread_rtsp.cpp  rtsp_recorder.cpp  rtsp_stream.cpp
tests/: CMakeLists.txt  test_source_spec.cpp  test_tracker.cpp
yolov3_car_detection/: car_detection.cpp  car_detection_dual.cpp  car_detection_dual_threaded.cpp  car_detection_webcam.cpp
yolov3_cow_detection/: cow_detection.cpp  cow_detection_file.cpp
yolov3_human_detection/: human_detection.cpp
yolov3_plate_recognition/: noYolo_plate_recognition.cpp  no_yolo_plate_recognition  plate_recognition  plate_recognition.cpp
yolov7_cow_detection/: cow_detection_file.cpp
yolov8_car_plates_detection/: main.cpp
